--- a/moodify/index.html
+++ b/moodify/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--to make website responsive-->
     <title>Moodify</title>
 
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 
 
 <!--lobster font link-->
@@ -161,6 +161,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
 
-    <script src="..\js\index.js"></script>
+    <script src="js\index.js"></script>
 </body>
 </html>
