--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                 <h3>Welcome to</h3>
                 <h1>MOODIFY</h1>
                 <p>At Moodify,we understand the importance of mental health and well-being. We're here to support you on your journey towards better mental health through personalized assessment and tailored solutions.</p>
-                <button class="reg_btn" onclick="location.href='./reg.html'">Register/Login</button>
+                <button class="reg_btn" onclick="location.href='moodify/html/reg.html'">Register/Login</button>
             </div>
             <div class="images">
-                <img src="../images/brain.jpg" alt="Large Brain" class="brain-image">
-                <img src="../images/doctor-1.jpeg" alt="Bouncing Image 1" class="bouncing-image1">
-                <img src="../images/doctor-2.jpeg" alt="Bouncing Image 2" class="bouncing-image2">
+                <img src="moodify/images/brain.jpg" alt="Large Brain" class="brain-image">
+                <img src="moodify/images/doctor-1.jpeg" alt="Bouncing Image 1" class="bouncing-image1">
+                <img src="moodify/images/doctor-2.jpeg" alt="Bouncing Image 2" class="bouncing-image2">
             </div>
         </div>
     </section>
@@ -93,7 +93,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <!-- Children/Teens -->
-                <div class="age-group-card flex flex-col items-center bg-white p-6 rounded-xl shadow-md hover:shadow-lg cursor-pointer" onclick="location.href='../html/teen.html'">
+                <div class="age-group-card flex flex-col items-center bg-white p-6 rounded-xl shadow-md hover:shadow-lg cursor-pointer" onclick="location.href='moodify/html/teen.html'">
                     <div class="w-20 h-20 bg-blue-100 rounded-full flex items-center justify-center mb-4">
                         <i class="fas fa-child text-3xl text-primary"></i>
                     </div>
@@ -102,7 +102,7 @@
                 </div>
                 
                 <!-- Adults -->
-                <div class="age-group-card flex flex-col items-center bg-white p-6 rounded-xl shadow-md hover:shadow-lg cursor-pointer" onclick="location.href='../html/adult.html'">
+                <div class="age-group-card flex flex-col items-center bg-white p-6 rounded-xl shadow-md hover:shadow-lg cursor-pointer" onclick="location.href='moodify/html/adult.html'">
                     <div class="w-20 h-20 bg-green-100 rounded-full flex items-center justify-center mb-4">
                         <i class="fas fa-user text-3xl text-primary"></i>
                     </div>
@@ -111,7 +111,7 @@
                 </div>
                 
                 <!-- Seniors -->
-                <div class="age-group-card flex flex-col items-center bg-white p-6 rounded-xl shadow-md hover:shadow-lg cursor-pointer" onclick="location.href='../html/aged.html'">
+                <div class="age-group-card flex flex-col items-center bg-white p-6 rounded-xl shadow-md hover:shadow-lg cursor-pointer" onclick="location.href='moodify/html/aged.html'">
                     <div class="w-20 h-20 bg-purple-100 rounded-full flex items-center justify-center mb-4">
                         <i class="fas fa-user-tie text-3xl text-primary"></i>
                     </div>
@@ -127,8 +127,8 @@
         <div class="about-container">
             <div class="about-content" id="about-content">
                 <div class="about-images">
-                    <img class="watering" src="../images/watering.jpeg" alt="watering">
-                    <img class="tree-brain" src="../images/tree-brain.jpeg" alt="tree-brain">
+                    <img class="watering" src="moodify/images/watering.jpeg" alt="watering">
+                    <img class="tree-brain" src="moodify/images/tree-brain.jpeg" alt="tree-brain">
                 </div>
 
                 <div class="about-paragraphs">
