--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- Navbar -->
     <header>
-        <img src="../images/logo.jpeg" alt="Logo">
+        <img src="./moodify/images/logo.jpeg" alt="Logo">
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
